Fix masthead missing z-index, closes #15

--- a/client/styles/components/_masthead.scss
+++ b/client/styles/components/_masthead.scss
@@ -3,6 +3,7 @@
   top: 0;
   right: 0;
   left: 0;
+  z-index: 1;
   padding: 10px;
   white-space: nowrap;
   color: #ffffff;
